--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
   <title>Cropping Editor</title>
-
+  <link rel="shortcut icon" href="./img/NIIT/favicon.ico" type="image/vnd.microsoft.icon" id="favicon" />
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/cropperjs/dist/cropper.min.js"></script>
   <link href="./node_modules/cropperjs/dist/cropper.min.css" rel="stylesheet">
